[package]
name = "hermis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
rss = "2.0.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
